[project]
name = "mm-backtest"
version = "0.1.0"
description = "Market-making backtest for ETH perpetual (take-home)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mm_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
